# JoySafeter

./: INSTALL.md  INSTALL_CN.md  README.md  README_CN.md
.github/workflows/: docker-build.yml  release.yml
backend/: env.example  pyproject.toml
backend/alembic/versions/: 20260228_000010_drop_openclaw_task_table.py  20260228_085915_afb42e79eefb_add_graph_test_cases.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  openclaw_chat.py  openclaw_devices.py  openclaw_proxy.py  openclaw_tasks.py
backend/app/common/: logging.py
backend/app/models/: __init__.py  openclaw_instance.py
backend/app/services/: openclaw_instance_service.py  openclaw_task_service.py
backend/app/websocket/: openclaw_handler.py
backend/tests/api/: test_sandboxes.py
deploy/: .env.example  deploy.sh  docker-compose.yml  quick-start.sh
deploy/docker/: backend.Dockerfile  sandbox.Dockerfile
deploy/openclaw/: Dockerfile  start-openclaw.sh
frontend/: env.example  middleware.ts
frontend/app/chat/services/modeHandlers/: defaultChatModeHandler.ts
frontend/app/openclaw/: page.tsx
frontend/app/openclaw/components/: DeviceManager.tsx  InstanceManager.tsx  OpenClawManagement.tsx  OpenClawWebUI.tsx  TaskList.tsx  TaskOutputViewer.tsx  TaskSubmitForm.tsx
frontend/lib/i18n/locales/: en.ts  zh.ts
